Edited wiki page Readme through web user interface.

--- a/wiki/Readme.wiki
+++ b/wiki/Readme.wiki
@@ -1,5 +1,5 @@
 #summary Readme of the project
-#labels Featured,Phase-Requirements
+#labels Featured,Phase-Requirements,Phase-Design
 
 = Introduction =
 
