--- a/wiki/DESCRIPTION.wiki
+++ b/wiki/DESCRIPTION.wiki
@@ -49,7 +49,7 @@ The top-most module that is used to run the Pytomo tool.
 }}}     
 ====Functions====
     
-  * *compute_stats(url)* Return a list of the statistics related to the url. The contents of the list are : (url, cache_url, current_stats) where current_stats is a list containing: `[`Ping_times, download_statistics, DNS resolver used `]`
+  * *compute_stats(url)* Returns a list of the statistics related to the url. The contents of the list are : (url, cache_url, current_stats) where current_stats is a list containing: `[`Ping_times, download_statistics, DNS resolver used `]`
 
   * *format_stats(stats)* Functions used to format the stats obtained from compute_stats function so that they can be inserted into the sqlite3 database. The stats are converted into a tuple. The arguments to this function is the list returned by compute_stats().
 
@@ -57,7 +57,7 @@ The top-most module that is used to run the Pytomo tool.
 
   * *check_out_files(filepattern, directory, timestamp)* Returns a full path of the file used for the output. It checks if the path exists, if not then the file is created in the path if possible else it is created in the default user directory.
 
-  * *do_crawl(result_stream=sys.stdout, db_file=None, timestamp=None)* Crawls the urls given by the urlfile.txt(present in the package). The crawl is performed upto MAX_ROUNDS or MAX_VISITED_URLS. The statistcal resuluts obtained are inserted into the db_file.
+  * *do_crawl(result_stream=sys.stdout, db_file=None, timestamp=None)* Crawls the urls given by the urlfile.txt(present in the package). The crawl is performed upto MAX_ROUNDS or MAX_VISITED_URLS. The statistical results obtained are inserted into the db_file.
 
   * *main(argv=None)* This is the program wrapper for the start_pytomo module. It is mainly used to setup and initialize the logging and other startup parameters.
 
@@ -73,7 +73,7 @@ File containing the various parameters and constants that are used for the analy
   * EXTRA_NAME_SERVERS = A list containing the name of the resolver and its IP address. This resolver will be used to get the IP address of the youtube cache.
   * PING_PACKETS = Nb, of ping packets to be sent.
   * DOWNLOAD_TIME = The duration for which the video must be downloaded.
-  * BUFFERING_VIDEO_DURATION = The duration for which the video is to be buffer.
+  * BUFFERING_VIDEO_DURATION = The duration for which the video is to be buffered.
   * MIN_PLAYOUT_BUFFER_SIZE = The size of the buffer for the video stream.
   * RESULT_DIR = The directory to store the text results.
   * RESULT_FILE = The file to store the text results.
@@ -82,7 +82,7 @@ File containing the various parameters and constants that are used for the analy
   * TABLE = The name of the result table.
   * LOG_DIR = The directory to store the log files. 
   * LOG_FILE = The file to store the logs.
-  * LOG_LEVEL = Parameter to set the log level(choose from DEBUG, INFO,               WARNING,ERROR and CRITICAL)
+  * LOG_LEVEL = Parameter to set the log level(choose from DEBUG, INFO, WARNING, ERROR and CRITICAL)
   * PROXIES = The HTTP Proxy to be used.(Set from command-line at run-time by  user)
 
 ===lib_youtube_download.py===
@@ -101,7 +101,7 @@ Module to download youtube video for a limited amount of time and calculate the 
    * *get_download_stats(ip_address_uri, downloadtime=config_pytomo.DOWNLOADTIME):*
         Returns a tuple of stats for download from an url based on ip 
         address. The tuple contains stats containing: `[`downloadtime, 
-        data duration, datalength, video encodingrate, size of video in  bytes, Nb.of interruptions, accumulatedbuffer size, accumulated playback , current remaining buffer, Maximum Instant Throughput achieved `]`
+        data duration, datalength, video encodingrate, size of video in  bytes, Nb.of interruptions, accumulated buffer size, accumulated playback , current remaining buffer, Maximum Instant Throughput achieved `]`
  
 ===lib_dns.py===
 
@@ -181,7 +181,7 @@ Function to get the most popular Youtube videos according to the time frame.
     Not meant to be called directly. But provides one function as discussed below.
 
 *Arguments*
-    time = 'today' or 'month' or 'week' or alltime'.
+    time = 'today' or 'month' or 'week' or 'alltime'.
     max_results = Total top videos needed (in  multiples of 25)
 
 *Function*
@@ -231,17 +231,17 @@ The columns of the database are as follows:
   * Timestamp   -  A timestamp indicating the time of inserting the row.
   * Service     - The website on which the analysis is performed.Example: Youtube, Megavideo.
   * Url         - The url of the webpage.
-  * !CacheUrl    - The Url of the cache server hosting the video.
+  * !CacheUrl   - The Url of the cache server hosting the video.
   * IP          - The IP address of the cache server from which the video is downloaded.
   * Resolver    - The DNS resolver used to get obtain the IP address of the cache server.Example Google DNS, Local DNS
-  * !DownloadTime     - The Time taken to download the video sample (We do not download the entire video but only for a limited download time.)
+  * !DownloadTime  - The Time taken to download the video sample (We do not download the entire video but only for a limited download time.)
   * !VideoDuration - The actual duration of the complete video.
-  * !VideoLength     - The length(in bytes) of the complete video.
-  * !EncodingRate     - The encoding rate of the video. 
+  * !VideoLength   - The length(in bytes) of the complete video.
+  * !EncodingRate  - The encoding rate of the video. 
   * !DownloadBytes - The length of the video sample(in bytes).
   * !DownloadInterruptions -  Nb of interruptions experienced during the download.
-  * !BufferingDuration     -  Accumulate time spend in buffering state
-  * !PlaybackDuration     - Accumulate time spend in playing state.
+  * !BufferingDuration -  Accumulate time spend in buffering state
+  * !PlaybackDuration - Accumulate time spend in playing state.
   * !BufferDurationAtEnd     - The buffer length at the end of download.
   * !PingMin     - The minimum recorded ping time to the resolved IP address of the cache server.
   * !PingAvg     - The average recorded ping time to the resolved IP address of the cache server.
@@ -249,7 +249,7 @@ The columns of the database are as follows:
     
 ==results/==
 
-This folder contains the result files. The results in these file are listed in text format. It is a list containing `[Video url, Cache url, IP address of cache server, Ping RTT times to the Cache server, Download stats, Name - IP address of the DNS resolver]` where Download stats = `[`downloadtime, data duration, datalength, video encodingrate, size of video in bytes, Nb.of interruptions, accumulated buffer-size, accumulated playback , current remaining buffer `]`
+This folder contains the result files. The results in these file are listed in text format. It is a list containing `[Video url, Cache url, IP address of cache server, Ping RTT times to the Cache server, Download stats, Name - IP address of the DNS resolver]` where Download stats = `[`downloadtime, data duration, data length, video encoding rate, size of video in bytes, Nb.of interruptions, accumulated buffer-size, accumulated playback , current remaining buffer `]`
  
 
 ==External Links==
