Edited wiki page DESCRIPTION through web user interface.

--- a/wiki/DESCRIPTION.wiki
+++ b/wiki/DESCRIPTION.wiki
@@ -2,7 +2,8 @@
 =PYTOMO=
 
   * Authors: Louis Plissonneau, Parikshit Juluri, Mickaël Meulle
-  * Version: 0.4.0 
+  * Version: 0.4.0
+  * Email : pytomo@gmail.com 
   * Copyright: GPLv2
 
 *Table of Contents*
