--- a/wiki/DESCRIPTION.wiki
+++ b/wiki/DESCRIPTION.wiki
@@ -2,7 +2,7 @@
 =PYTOMO=
 
   * Authors: Louis Plissonneau, Parikshit Juluri, Mickaël Meulle (Orange Labs)
-  * Research Collaborator: Ernst Biersack (Eurecom), Deep Medhi (UMKC)
+  * Research Collaborators: Ernst Biersack (Eurecom), Deep Medhi (UMKC)
   * Version: 0.4.0
   * Email : pytomo@gmail.com 
   * Copyright: GPLv2
